--- a/BigPlanetTW/res/values-zh/strings.xml
+++ b/BigPlanetTW/res/values-zh/strings.xml
@@ -68,7 +68,7 @@
     <string name="DOWNLOAD_PROGRESS_MESSAGE_PATTERN">{0} 公里\n{1} 地圖小檔案 / {2} KB</string>
     
     <string name="ABOUT_TITLE">Big Planet TW 中文版</string>
-    <string name="ABOUT_MESSAGE">Original Copyright © 2008-2009 Vadim Bartko with GNU General Public License. \n\nTW 版由 \"Dr. TYT 的 Android 地圖\" 修改與重新發佈。\n{url}</string>
+    <string name="ABOUT_MESSAGE">BigPlanet 原作者為 Vadim Bartko，程式為 GNU General Public License 授權。 \n\nBigPlanetTW 由 \"Dr. TYT 的 Android 地圖\" 修改與重新發佈。\n{url}</string>
     <string name="ABOUT_URL">http://android-map.blogspot.com</string>
 
     <string name="sdcard_unavailable">請放入 SD 卡並重新啟動程式。</string>
