--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -68,7 +68,7 @@
     <string name="DOWNLOAD_PROGRESS_MESSAGE_PATTERN">{0} 公里\n{1} 地图小档案 / {2} KB</string>
     
     <string name="ABOUT_TITLE">Big Planet Track 中文版</string>
-    <string name="ABOUT_MESSAGE">BigPlanetTrack 修改自 BigPlanetTW，详细请看 \"Dr. TYT 的 Android 地图\"。\n{url}</string>
+    <string name="ABOUT_MESSAGE">Big Planet Track 修改自 Big Planet TW，详细请看网站 \"Dr. TYT 的 Android 地图\"。\n{url}</string>
     <string name="ABOUT_URL">http://android-map.blogspot.com</string>
 
     <string name="sdcard_unavailable">请放入SD卡并重新启动程式。</string>
