--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -37,6 +37,7 @@
     <string name="ABOUT_MENU">关于</string>
     <string name="MAP_SOURCE_MENU">地图来源</string>
     <string name="SQLiteDB_MENU">SQLite地图资料库</string>
+    <string name="SHARE_MENU">分享位置</string>
     <string name="TOOLS_MENU">更多</string>
     <string name="CACHE_MAP_MENU">储存地图供离线使用</string>
     <string name="NETWORK_MODE_MENU">网路模式</string>
@@ -87,6 +88,10 @@
     <string name="bookmark_name">名称</string>
     <string name="bookmark_description">描述</string>
 
-
+    <string name="share_location_groupname">群组名称:</string>
+    <string name="share_location_account">Google 帐号:</string>
+    <string name="share_location_password">Google 密码:</string>
+    <string name="share_location_checkbox">传送/接收 GPS 座标</string>
+    <string name="share_location_note"></string>
 
 </resources>
