--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -30,8 +30,8 @@
     
     <string name="auto_follow_disabled">解除自动跟随功能</string>
     <string name="auto_follow_enabled">开启自动跟随功能</string>
-    <string name="track_disabled">解除記錄軌跡功能</string>
-    <string name="track_enabled">开启記錄軌跡功能</string>
+    <string name="track_disabled">解除记录轨迹功能</string>
+    <string name="track_enabled">开启记录轨迹功能</string>
     <string name="MY_LOCATION_MENU">我的位置</string>
     <string name="SEARCH_MENU">搜寻</string>
     <string name="ABOUT_MENU">关于</string>
@@ -87,5 +87,7 @@
     
     <string name="bookmark_name">名称</string>
     <string name="bookmark_description">描述</string>
+    
+    <string name="clearSaveTrackFales">请先停止记录轨迹</string>
 
 </resources>
