--- a/branches/BigPlanetTrack/res/values/strings.xml
+++ b/branches/BigPlanetTrack/res/values/strings.xml
@@ -88,4 +88,6 @@
     <string name="bookmark_name">Name</string>
     <string name="bookmark_description">Description</string>
     
+    <string name="clearSaveTrackFales">Please stop recording the track first.</string>
+    
 </resources>
