--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -31,7 +31,7 @@
     <string name="auto_follow_disabled">解除自動跟隨功能</string>
     <string name="auto_follow_enabled">開啟自動跟隨功能</string>
     <string name="track_disabled">解除記錄軌跡功能</string>
-    <string name="track_enabled">开启記錄軌跡功能</string>
+    <string name="track_enabled">開啟記錄軌跡功能</string>
     <string name="MY_LOCATION_MENU">我的位置</string>
     <string name="SEARCH_MENU">搜尋</string>
     <string name="ABOUT_MENU">關於</string>
@@ -89,5 +89,6 @@
     <string name="bookmark_description">描述</string>
     
     <string name="clearSaveTrackFales">請先停止記錄軌跡</string>
+    <string name="notify_recording">正在記錄軌跡...</string>
 
 </resources>
