* Show notifications when the user has been connected to XMPP server and is recording the track. * The track on the map can be updated automatically when receiving the leader's GPS locations. * Arrange GoogleAccountActivity layout (hide drop-down list and check box if not needed)

--- a/branches/BigPlanetTrack/res/values-zh-rCN/strings.xml
+++ b/branches/BigPlanetTrack/res/values-zh-rCN/strings.xml
@@ -89,5 +89,6 @@
     <string name="bookmark_description">描述</string>
     
     <string name="clearSaveTrackFales">请先停止记录轨迹</string>
+    <string name="notify_recording">正在记录轨迹...</string>
 
 </resources>
